Source/WebCore/platform/ios/PlatformEventFactoryIOS.mm
@@ -30,11 +30,26 @@
 
 #import "IntPoint.h"
 #import "KeyEventCocoa.h"
+#import "KeyEventCodesIOS.h"
 #import "Logging.h"
 #import "WAKAppKitStubs.h"
 #import "WebEvent.h"
 #import "WindowsKeyboardCodes.h"
+#import <UIKit/UIKit.h>
+#import <wtf/Optional.h>
+#import <wtf/SoftLinking.h>
 #import <wtf/WallTime.h>
+
+SOFT_LINK_FRAMEWORK(UIKit)
+SOFT_LINK_CONSTANT(UIKit, UIKeyInputUpArrow, NSString *)
+SOFT_LINK_CONSTANT(UIKit, UIKeyInputDownArrow, NSString *)
+SOFT_LINK_CONSTANT(UIKit, UIKeyInputLeftArrow, NSString *)
+SOFT_LINK_CONSTANT(UIKit, UIKeyInputRightArrow, NSString *)
+
+#define UIKeyInputUpArrow getUIKeyInputUpArrow()
+#define UIKeyInputDownArrow getUIKeyInputDownArrow()
+#define UIKeyInputLeftArrow getUIKeyInputLeftArrow()
+#define UIKeyInputRightArrow getUIKeyInputRightArrow()
 
 namespace WebCore {
 
@@ -82,6 +97,32 @@ static PlatformEvent::Type mouseEventType(WebEvent *event)
     }
 }
 
+static std::optional<int> convertSpecialKeyToCharCode(NSString *keyString)
+{
+    if ([keyString isEqualToString:UIKeyInputUpArrow])
+        return NSUpArrowFunctionKey;
+    if ([keyString isEqualToString:UIKeyInputDownArrow])
+        return NSDownArrowFunctionKey;
+    if ([keyString isEqualToString:UIKeyInputLeftArrow])
+        return NSLeftArrowFunctionKey;
+    if ([keyString isEqualToString:UIKeyInputRightArrow])
+        return NSRightArrowFunctionKey;
+    return std::nullopt;
+}
+
+int keyCodeForEvent(WebEvent *event)
+{
+    if ([event.characters isEqualToString:UIKeyInputUpArrow])
+        return VK_UP;
+    if ([event.characters isEqualToString:UIKeyInputDownArrow])
+        return VK_DOWN;
+    if ([event.characters isEqualToString:UIKeyInputLeftArrow])
+        return VK_LEFT;
+    if ([event.characters isEqualToString:UIKeyInputRightArrow])
+        return VK_RIGHT;
+    return event.keyCode;
+}
+
 class PlatformMouseEventBuilder : public PlatformMouseEvent {
 public:
     PlatformMouseEventBuilder(WebEvent *event)
@@ -125,36 +166,36 @@ PlatformWheelEvent PlatformEventFactory::createPlatformWheelEvent(WebEvent *even
 
 String keyIdentifierForKeyEvent(WebEvent *event)
 {
-    NSString *s = event.charactersIgnoringModifiers;
-    if ([s length] != 1) {
-        LOG(Events, "received an unexpected number of characters in key event: %u", [s length]);
-        return "Unidentified";
+    NSString *characters = event.charactersIgnoringModifiers;
+    if (auto specialKeyCharCode = convertSpecialKeyToCharCode(characters))
+        return keyIdentifierForCharCode(*specialKeyCharCode);
+    if ([characters length] != 1) {
+        LOG(Events, "received an unexpected number of characters in key event: %u", [characters length]);
+        return "Unidentified"_s;
     }
-
-    return keyIdentifierForCharCode(CFStringGetCharacterAtIndex((CFStringRef)s, 0));
+    return keyIdentifierForCharCode([characters characterAtIndex:0]);
 }
 
 String keyForKeyEvent(WebEvent *event)
 {
     NSString *characters = event.characters;
     auto length = [characters length];
-
     // characters return an empty string for dead keys.
     // https://developer.apple.com/reference/appkit/nsevent/1534183-characters
     // "Dead" is defined here https://w3c.github.io/uievents-key/#keys-composition.
     if (!length)
         return "Dead"_s;
-
+    if (auto specialKeyCharCode = convertSpecialKeyToCharCode(characters))
+        return keyForCharCode(*specialKeyCharCode);
     if (length > 1)
         return characters;
-
     return keyForCharCode([characters characterAtIndex:0]);
 }
 
 // https://w3c.github.io/uievents-code/
 String codeForKeyEvent(WebEvent *event)
 {
-    switch (event.keyCode) {
+    switch (keyCodeForEvent(event)) {
     // Keys in the alphanumeric section.
     case VK_OEM_3: return "Backquote"_s;
     case VK_OEM_5: return "Backslash"_s;
@@ -378,7 +419,7 @@ public:
         m_key = keyForKeyEvent(event);
         m_code = codeForKeyEvent(event);
         m_keyIdentifier = keyIdentifierForKeyEvent(event);
-        m_windowsVirtualKeyCode = event.keyCode;
+        m_windowsVirtualKeyCode = keyCodeForEvent(event);
         m_autoRepeat = event.isKeyRepeating;
         m_isKeypad = false; // iOS does not distinguish the numpad. See <rdar://problem/7190835>.
         m_isSystemKey = false;
